--- a/intention motor representation goal ascription with corrado sinigaglia (paper 2)/Motor Representation in Goal Ascription.tex
+++ b/intention motor representation goal ascription with corrado sinigaglia (paper 2)/Motor Representation in Goal Ascription.tex
@@ -43,6 +43,9 @@
 % --- paste from google docs after here ---
 
 
+
+
+
 \begin{abstract}
 \noindent
 %
@@ -240,45 +243,114 @@ E.g. clapping:
 
 \section{Experience of Action}
 \label{sec:processes}
-Our aim in this section is to explain how motor representations could sometimes have content-respecting influences on judgements about the goals of observed actions. Broadly, our will be proposal is that the influence of motor representation on observational judgements goes via experience.  It is because motor representations can affect our experiences when we observe actions that those motor representations can facilitate judgements about the actions. However this is consistent with two quite different hypotheses concerning the experiences associated with motor representation in action observation. 
+Our aim in this and the following sections is to explore how motor representations could sometimes have content-respecting influences on judgements about the goals of observed actions. Broadly, our proposal is that the influence of motor representation on observational judgements goes via experience.  It is because motor representations can affect our experiences when we observe actions that those motor representations can facilitate judgements about the actions. However this broad idea is consistent with two quite different hypotheses concerning the experiences associated with motor representation in action observation. 
 
-One hypothesis, call it the Indirect Hypothesis, is based on evidence that, in observing action, motor representation can influence visual and acoustic experience.  (Perhaps this holds for other modalities too).  On this hypothesis, these influences enable an observer to identify goals to which the observed action is directed because the observer is additionally able to recognise actions from their associated sensory effects. To illustrate, suppose that an observer can associate the characteristic sound of a newspaper being snapped open with the action of snapping open a newspaper. Suppose also that, when observing an action, motor representations can influence whether, when or how she experiences this characteristic sound.  Then motor processes can indirectly influence the speed and accuracy of the observer's judgements about which actions are directed to this goal, the snapping open of a newspaper, by influencing whether, when or how she experiences the characteristic sound of this action.%
+
+One hypothesis, call it the Indirect Hypothesis, is based on evidence that, in observing action, motor representation can influence visual and acoustic experiences (see figure \vref{fig_indirect_hypothesis}). (Perhaps this holds for other modalities too.) The relevant experiences are perceptual experiences of bodily configurations and movements as an action unfolds, and perceptual experiences of characteristic sensory effects of actions.  Such experiences sometimes enable an observer to make judgements about the goals of actions, for she may associate particular patterns of bodily movement or particular sensory effects with particular goals.  But in many cases of action observation, the agent's bodily movements and the sensory effects of her actions may be partially obscured or surrounded by irrelevant distractors, or otherwise difficult to identify.  But suppose that, as some evidence suggests, motor representation can influence---and even enhance---such experiences of bodily configurations and movements, and of sensory effects.  Then motor representations might thereby facilitate judgements about the goals of actions.  So on the Indirect Hypothesis, motor representations sometimes enhance perceptual experiences of movements or sensory effects which in turn sometimes facilitate judgements about the goals of actions.   
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\textwidth]{fig_indirect_hypothesis.png}
+\caption{
+\label{fig_indirect_hypothesis}
+	The Indirect Hypothesis.
+}
+\end{center}
+\end{figure}
+
+
+To illustrate, suppose that an observer can associate the characteristic sound of a newspaper being snapped open with the action of snapping open a newspaper. Suppose also that, when observing an action, motor  representations can influence whether, when or how this observer experiences this characteristic sound.  Then motor processes can indirectly influence the speed and accuracy of the observer's judgements about which actions are directed to this goal, the snapping open of a newspaper, by influencing whether, when or how she experiences the characteristic sound of this action.%
 \footnote{
-The Indirect Hypothesis is inspired by and consistent with views defended in \citet{Csibra:2007fy} and *Knoblich.  However, to our knowledge these authors have not considered exactly our question about content-respecting influences of motor representation on judgement, and we are not suggesting that the would endorse the Indirect Hypothesis in its entirety.  
+The Indirect Hypothesis is inspired by and consistent with views defended in \citet{Csibra:2007fy} and \citet{Wilson:2005qu}.  However, to our knowledge these authors have not considered exactly our question about content-respecting influences of motor representation on judgement, and we are not suggesting that the would endorse the Indirect Hypothesis in its entirety.  
 }
 
-The other hypothesis is in some ways more radical.  This hypothesis, call it the Direct Hypothesis, is that in observing action we experience not only movements and sounds but also goal-directed actions as such. Such experiences---call the motor experiences---stand to motor representations roughly as visual experiences stand to visual representations.  The motor experience of an action as directed to a particular outcome is made possible by a motor representation of that outcome.  So motor representations can have a content-respecting influence on judgements because motor representations enable motor experiences on which judgements are based.%
+
+The other hypothesis is in some ways more radical.  This hypothesis, call it the Direct Hypothesis, is that in observing action we experience not only movements and sounds but also goal-directed actions as such (see figure \vref{fig_direct_hypothesis}). Such experiences---call them motor experiences---stand to motor representations somewhat as visual experiences stand to visual representations.  The motor experience of an action as directed to a particular outcome is made possible by a motor representation of that outcome.  So motor representations can have a content-respecting influence on judgements because motor representations enable motor experiences on which the judgements can be  based.  Or so the Direct Hypothesis claims.%
 \footnote{
 In formulating the Direct Hypothesis we draw on ideas from \citet{rizzolatti_mirrors_2008} and \citet{Jeannerod:1999kj}.
 }
 
-Let us say that an experience, motor or not, is revelatory of action just if it  can provide the subject of experience with reasons for correct judgements about which action someone is performing. On both hypotheses motor representations enable experiences which are revelatory of action. And both hypotheses use this broad idea to explain how motor representations could have content-respecting influences on judgements. The primary difference between the hypotheses concerns what these revelatory experiences are experiences of: whether all such are experiences of movements, sounds and the like only (the Indirect Hypothesis), or whether some are experiences of goal-directed actions as such (the Direct Hypothesis).  
+\begin{figure}
+\begin{center}
+\includegraphics[width=\textwidth]{fig_direct_hypothesis.png}
+\caption{
+\label{fig_direct_hypothesis}
+	The Direct Hypothesis.
+}
+\end{center}
+\end{figure}
 
-In the next section we expand on and consider evidence for the first hypothesis before turning to the second hypothesis in the following section.
+
+Let us say that an experience, motor or not, is \emph{revelatory of action} just if it can provide the subject of experience with reasons for correct judgements about which action someone is performing. On both hypotheses motor representations enable experiences which are revelatory of action. And both hypotheses use this broad idea to explain how motor representations could have content-respecting influences on judgements. The primary difference between the hypotheses concerns what these revelatory experiences are experiences of: whether all are experiences of movements, sounds and the like only (the Indirect Hypothesis), or whether some are experiences of goal-directed actions as such (the Direct Hypothesis).  
+
+In the next section we expand on and consider evidence for the Indirect Hypothesis before turning to the Direct Hypothesis in the following section.
+
 
 
 \section{The Indirect Hypothesis}
-The Indirect Hypothesis is depends on the claim that motor representations can influence sensory experiences.  This claim is supported by a variety of evidence.  \citet{bortoletto:2011_action} show that motor plans, such as might be involved in producing a gesture with the hand, can influence visual processes \citep{bortoletto:2011_action}. The influence of motor representations on visual processes varies depending on both the gesture to be performed and the visual stimulus presented. Importantly, these influences can be detected before any action occurs, showing that it is the motor representations rather than any consequent movements which are influencing visual processes. [*Some other evidence; stress that the effect can be found using different measures.]  As it may be possible to influence visual processes in ways that make no difference to experience, we do not take these findings alone to establish the claim that motor representations could enable visual experiences.  But these findings do at least show that the claim is consistent with the neuropsychological facts.% 
+The Indirect Hypothesis depends on the claim that motor representations can influence perceptual experiences.  If this is right, we would expect to find that motor representation can have a content-respecting influence on perceptual processing. There is indeed evidence of such influences. For instance, \citet{bortoletto:2011_action} show that motor plans, such as might be involved in producing a gesture with the hand, can influence visual processes. Here the influence of motor representations on visual processes varies depending on both the gesture being planned and the visual stimulus presented. Importantly, these influences can be detected before any action occurs, showing that it is the motor representations rather than any consequent movements which are influencing visual processes.% 
 \footnote{
 For a recent review of some of the evidence concerning motor influences on perceptual processing, see \citet{halasz:2012_unconscious}. (*refs)
 }  
+This evidence shows that the claim about motor representations influencing experience is at least consistent with how motor and perceptual processes interact.
 
-What would establish that some motor representations enable perceptual experiences? For some very special pairs of tones, the first is sometimes perceived as lower in pitch than the second and sometimes as higher in pitch.  Repp and Knoblich (\citeyear{repp:2007_action}) had a group of expert pianists and a control group of non-experts press two keys in sequence, where the first key was sometimes left and sometimes right of the second key.  They found that, for the expert pianists, the direction of the key presses modulated the experience: it influenced the perceived direction of the change in pitch. Could what modulates experience in this case be not a motor representation but the occurrence of a movement, or perhaps even the perception of a movement of the subject's own fingers?  Against this, note that the effect was not observed in non-expert pianists: for them the direction of action did not measurably influence the experienced pitch direction. Since both groups moved in the same way, if the modulation were due to movement only we would expect it to occur irrespective of expertise. Instead it seems likely that differences in expertise between the two groups of subjects affected how the movements they performed were represented motorically, and these differences in motor representation are in turn what explains their experience of the change in pitch.  This study, and others like it,%
+Of course, this evidence does not show that motor representation influences perceptual experiences.  After all, it may be possible to influence sensory processes in ways that make no difference to experience.  But there is also evidence that motor representation can influence perceptual judgements.  For some very special pairs of tones, the first is sometimes perceived as lower in pitch than the second and sometimes as higher in pitch.  Call these \emph{ambiguous tone pairs}.  Repp and Knoblich (\citeyear{repp:2007_action}) had a group of expert pianists and a control group of non-experts press two keys in sequence, where the first key was sometimes to the left, and sometimes to the right, of the second key.  The key presses produced an ambiguous tone pair, and the tones always occurred in the same order regardless of which key was pressed first.  By asking subjects to report how they perceived the relative pitch of the tones, Repp and Knoblich found that, for the expert pianists, the direction of the key presses influenced the perceived direction of the change in pitch. Could what influences perceptual experience in this case be not a motor representation but the occurrence of a movement, or perhaps even the perception of a movement of the subject's own fingers? Against this possibility, note that the effect was not observed in non-expert pianists: for them the direction of action did not measurably influence the perceived pitch direction. Since both groups moved in the same way, if the influence were due to movement only we would expect it to occur irrespective of expertise. Instead it seems likely that differences in expertise between the two groups of subjects, expert and non-expert, affected how the movements they performed were represented motorically, and that these differences in motor representation are in turn what explains their perception of relative pitch.  This study, and others like it,%
 \footnote{
-See also \citet{zwickel:2010_interference} who investigate effects of action on visual experience of motion.  *more
+See also \citet{zwickel:2010_interference} who investigate effects of action on visual experience of motion.  *more \citep{schutz-bosbach:2007_perceptual}
 } 
-provide relatively direct evidence that motor representations can enable acoustic experiences.
+provide relatively direct evidence that motor representations can influence acoustic experiences.
 
-How do these findings bear on the second hypothesis above, according to which motor representation in action observation enables experiences of sounds and movements that somehow facilitate the identification of actions?  Perhaps the motor representations enable certain experiences of kinematic features which somehow enable subjects to better identify actions.  We do not claim that this is entirely plausible, only that the second hypothesis cannot be rejected out of hand.  This is enough to show that we cannot infer that there are experiences of action just from the fact that motor representation enables experiences which are revelatory of action.  Stronger evidence for the first hypothesis is needed.
+How do these findings bear on the Indirect Hypothesis above, according to which motor representation in action observation enables experiences of sounds and movements that somehow facilitate the identification of actions?  Consider observing someone playing two notes on a piano.  Given that you know something about which sounds are produced by various piano playing actions, hearing the relative pitch of these notes might in principle assist you in recognizing that a goal of her action is to play these two notes.  So if, as the findings indicate, motor representation can influence perceptions of pitch, it might thereby indirectly facilitate judgements about the goals of actions.  
 
-\subsection{Experiences of action}
-Our focus is experiences involved in observing actions, but let us first consider experiences involved in performing actions.  We shall argue that acting sometimes involves experiences which can ground judgements about what one has done even though these are not experiences of movements or sounds.  In effect, the idea will be that you can strip away perceptual experiences and still be left with experiences revelatory of action.  These can only be experiences of action, or so we claim.  Two phenomena are involved in making this argument.  The first is anosognosia for hemiplegia, which shows that there can be experiences revelatory of action even in the absence of any actual movements.  The second is deafference, which confirms that these experiences are unlikely to be illusory experiences of movement. Together these phenomena support the view that, in performing actions, we have experiences of actions and not only of movements, sounds and the like.  
+Of course the evidence we have considered leaves open the question of how extensive the influence of motor representations on perceptual experiences is.  For all we have said, such influences may be rare.  This is a potential problem for the Indirect Hypothesis, which requires such influences to occur in every case in which motor representation facilitates goal ascription.  However our aim in this paper is not to establish the correctness of an explanation but, more modestly, only to understand how motor representation could in principle facilitate judgements about the goals of actions.  Wilson and Knoblich (\citeyear{Wilson:2005qu}, p.\ 463) consider the possibility that motor representation may influence the representation of agents' bodies and their movements. They suggest that motor representation in action observation may help `to fill in missing or ambiguous information' and to project the likely course of an agent's bodily movements. This idea allows us to see that the Indirect Hypothesis is at least in principle capable of explaining how motor representation might facilitate goal ascription in a wide range of cases. Perhaps, then, motor representations of outcomes to which actions are directed influence---and even enhance---perceptual experiences of the agents' bodies and movements in ways that facilitate judgements about the goals of the actions.  So the Indirect Hypothesis.
+
+
+MR--->PE of configuration \& movements ---->> Judg
+MR ---> PE of pitch -->Judg about goal
+Pitch: MR influence Perc [no action observation]
+
+
+
+\subsection{The Direct Hypothesis: Experiences of Action}
+Our aim is to understand how motor representations of outcomes can have a content-respecting influence on judgements about the goals of actions. 
+According to the Direct Hypothesis, a motor representation of an outcome can underpin an experience of an action as directed to a matching outcome, and this experience can in turn ground a judgement about the action's being directed to a matching outcome.  This hypothesis hinges on two potentially controversial claims.  The first is that in observing action we experience not only movements, sounds and other sensory effects of actions but also the goal-directed actions as such. And the second is that such experiences are underpinned by motor representations of corresponding outcomes.  
+
+Is the first claim plausible?  Consider the following argument:
+%
+\begin{enumerate}
+\item
+There is a way of imagining acting which involves experiencing goal-directed actions as such.
+
+\item
+There are sometimes elements common to what you experience when you imagine performing a goal-directed action and what you experience when you observe someone else performing that action; in particular, the experience of action is common to both.
+\end{enumerate}
+Therefore:
+\begin{enumerate}[resume]
+\item
+Sometimes observing a goal-directed action involves experiencing it as such.
+\end{enumerate}
+%
+Without attempting to show that the premises are true, we shall offer some considerations which indicate that they are at least defensible. 
+
+On the first premise, (1), let us start by observing that there are two ways of imagining acting.  One, cognitive way of imagining involves something like thinking about performing an action.  Another, phenomenologically action-like way of imagining involves something almost like acting except that such imaginings are not necessarily responsive to the features of actual objects and do not necessarily result in bodily movements.  Suppose that you are about to perform a delicate operation with some scissors. You stand poised to act, but first pause to mentally pantomime performing the action. In some respects the experiences involved in this imaginative exercise may be barely distinguishable from experiences that might be involved in actually performing the operation (\citealp[p.\ 161]{currie:1997_mental}; \citealp[p.\ 727]{jeannerod:1995_mental}; \citealp[p.\ 638-9]{kosslyn:2001_neural}).  In fact, imagining performing the operation in advance has some of the benefits of actually rehearsing it.  For imagining performing an action in this phenomenologically action-like way sometimes resembles actually performing the action with respect to timing \citep{decety:1989_timing, decety:1996_imagined, Jeannerod:1994oz} and the sorts of factors that make acting more or less awkward \citep{parsons:1994_temporal, frak:2001_orientation}.  The first premise, (1), concerns this phenomenologically action-like way of imagining.  
+
+What do we experience when we imagine acting?  ***HERE
+a.  There are no movements or sensory effects to experience (but there is  no action produced either).
+b.  There is motor representation of action (but there may also be visual representation of sensory effects of the action not performed).
+c.  I could be mistaken about the movements involved in an action and about its sensory effects but still know that I am imagining it (and not just because I intend to imagine it and then do some imaginative thing or other---if my mind wanders so that I start imaginig a different action, I could know this).
+(one relevant consideration is that you know not only which action you are imagining but when you have succeeded in imagining performing it); ()
+(corollary: there can be experiences of action without experiences of acting)
+
+
+
+
+We shall argue that acting sometimes involves experiences which can ground judgements about what one has done even though these are not experiences of movements or sounds.  In effect, the idea will be that you can strip away perceptual experiences and still be left with experiences revelatory of action.  These can only be experiences of action, or so we claim.  Two phenomena are involved in making this argument.  The first is anosognosia for hemiplegia, which shows that there can be experiences revelatory of action even in the absence of any actual movements.  The second is deafference, which confirms that these experiences are unlikely to be illusory experiences of movement. Together these phenomena support the view that, in performing actions, we have experiences of actions and not only of movements, sounds and the like.  
 
 The argument sketched so far concerns experiences associated with performing actions, not observing them.  Note, however, that the basis of these experiences of action is motor representation and planning.  Since these are the very things which, in action observation, underlie the experiences enabling one to identify actions, it is reasonable to conclude that there is a phenomenal element common to performing an action and observing an action performed, namely the action itself.  Roughly, what you experience in performing an action is what you would experience if you were observing it.  But this is all to come; let us start by introducing some background. 
 
 Anosognosia for hemiplegia is a clinical condition in which patients deny, and appear largely unaware of, a severe paralysis of one or more limbs on one side of their body.  It typically follows a stroke involving damage to motor areas in the right hemisphere of the brain (*refs).  To illustrate the effects of this condition, consider a subject with anosognosia for hemiplegia who was asked to brush her hair holding a brush in her contralesional hand.  Although she was unable to move the hand, she proceeded to move her head as if her hair were being brushed, and then reported having successfully brushed her hair \citep{berti:2008_motor}. This form of anosognosia cannot be explained as entirely due to neglect or complete ignorance of part of one's body \citep[p.\ 165]{berti:2008_motor}.  
 
-Could anosognosia for hemiplegia be explained as mere  confabulation or a top-down effect of judgement on experience?  This is incompatible with the performance of anosognosics on bimanual tasks \citep{berti:2008_motor, garbarini:2012_moving}.  To illustrate, consider an anosognosic who has been asked to wash with both hands.  Although she can only actually move one hand, she may move this hand in much the way that she would do if she were actually washing with both hands (*ref: personal communication?).  This is hard for ordinary subjects to reproduce (try it). For a more carefully controlled illustration, consider anosognosic subjects who were asked to draw simultaneously with both hands, one hand was supposed to continuously draw a vertical line and the other hand to continuously draws a circle.  Anosognosic subjects can of course only actually move one hand, but they show interference as if both hands were actually being moved.  That is, if you were to perform this task, your vertical line would become somewhat oval; this interference is an effect of bimanual coordination.  The striking finding is that anosognosic subjects show the same pattern of interference although not actually drawing a circle.  By contrast, subjects with motor neglect and subjects with hemiplegia but no anosognosia do not show this pattern of interference \citep{garbarini:2012_moving}.  This suggests that anosognosia involves relatively detailed action-related experiences and cannot be entirely explained as confabulation.  
+Could anosognosia for hemiplegia be explained as mere confabulation or a top-down effect of judgement on experience?  This is incompatible with the performance of anosognosics on bimanual tasks \citep{berti:2008_motor, garbarini:2012_moving}.  To illustrate, consider an anosognosic who has been asked to wash with both hands.  Although she can only actually move one hand, she may move this hand in much the way that she would do if she were actually washing with both hands (*ref: personal communication?).  This is hard for ordinary subjects to reproduce (try it). For a more carefully controlled illustration, consider anosognosic subjects who were asked to draw simultaneously with both hands, one hand was supposed to continuously draw a vertical line and the other hand to continuously draws a circle.  Anosognosic subjects can of course only actually move one hand, but they show interference as if both hands were actually being moved.  That is, if you were to perform this task, your vertical line would become somewhat oval; this interference is an effect of bimanual coordination.  The striking finding is that anosognosic subjects show the same pattern of interference although not actually drawing a circle.  By contrast, subjects with motor neglect and subjects with hemiplegia but no anosognosia do not show this pattern of interference \citep{garbarini:2012_moving}.  This suggests that anosognosia involves relatively detailed action-related experiences and cannot be entirely explained as confabulation.  
 
 On the leading, best supported explanation, anosognosia for hemiplegia arises from defects in monitoring action.  When a subject with anosognosia for hemiplegia is asked to perform an action involving a hemiparetic limb, motor planning occurs as it might do in ordinary subjects. Now in ordinary subjects, and in hemiplegic subjects without anosognosia, the predicted effects of a planned action are compared with motor representations of action outcomes.  Consequently if such subjects tried and failed to initiate an action, they would normally be aware of their failure even without seeing or touching their limbs. However, in anosognosic subjects the comparator is damaged and no signal of failure is generated.  This is why it seems to them that they have acted despite failing even to initiate the action.  Of course, anosognosic subjects can perceive that their objectives have not been met: after apparently opening a bottle, for instance, they can see that the bottle remains shut; they would not normally proceed to drink from it.  And these subjects do not necessarily have visual, proprioceptive or tactile sensory impairments.  But the experience associated with motor planning dominates, so that it seems to them as if they have acted.  From their point of view, it seems that the bottle is peculiarly difficult to open rather than that they are unable to move a limb \citep[pp.\ 173-4]{berti:2008_motor}.  
 
@@ -356,5 +428,6 @@ MR<----> Action Judgment (action concept) <----> B \& D Judgment (b\&d concept)
 
 
 \end{document}
+
 
 
