--- a/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
+++ b/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
@@ -699,7 +699,7 @@ in order to capture the idea that agents acting on a shared intention conceive o
 %put roughly and without essential qualifications (see Section \vref{sec:fix}),
 % is by appeal to the idea that each agent has a plan for all of their actions.
 
-No amount of acting on intentions about other's intentions is not sufficient for shared agency.  
+No amount of acting on intentions about other's intentions is  sufficient for shared agency.  
 But conceiving of one's own and other's intentions and actions as part of a single plan might be.
 
 
